crates/ruff_python_parser/tests/snapshots/invalid_syntax@pos_only_py37.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/pos_only_py37.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..136,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 43..61,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 47..50,
                        node_index: NodeIndex(None),
                        parameter_node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 50..56,
                        node_index: NodeIndex(None),
                        posonlyargs: [
                            ParameterWithDefault {
                                end: 52,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 51..52,
                                    name: Identifier {
                                        id: Name("a"),
                                        range: 51..52,
                                        node_index: NodeIndex(None),
                                        parameter_node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 58..61,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 58..61,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 62..86,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 66..69,
                        node_index: NodeIndex(None),
                        parameter_node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 69..81,
                        node_index: NodeIndex(None),
                        posonlyargs: [
                            ParameterWithDefault {
                                end: 71,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 70..71,
                                    name: Identifier {
                                        id: Name("a"),
                                        range: 70..71,
                                        node_index: NodeIndex(None),
                                        parameter_node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        args: [
                            ParameterWithDefault {
                                end: 77,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 76..77,
                                    name: Identifier {
                                        id: Name("b"),
                                        range: 76..77,
                                        node_index: NodeIndex(None),
                                        parameter_node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 83..86,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 83..86,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 87..115,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 91..94,
                        node_index: NodeIndex(None),
                        parameter_node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 94..110,
                        node_index: NodeIndex(None),
                        posonlyargs: [
                            ParameterWithDefault {
                                end: 96,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 95..96,
                                    name: Identifier {
                                        id: Name("a"),
                                        range: 95..96,
                                        node_index: NodeIndex(None),
                                        parameter_node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        args: [],
                        vararg: Some(
                            Parameter {
                                range: 98..103,
                                name: Identifier {
                                    id: Name("args"),
                                    range: 99..103,
                                    node_index: NodeIndex(None),
                                    parameter_node_index: NodeIndex(None),
                                },
                                annotation: None,
                            },
                        ),
                        kwonlyargs: [
                            ParameterWithDefault {
                                end: 109,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 108..109,
                                    name: Identifier {
                                        id: Name("b"),
                                        range: 108..109,
                                        node_index: NodeIndex(None),
                                        parameter_node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 112..115,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 112..115,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 116..135,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 120..123,
                        node_index: NodeIndex(None),
                        parameter_node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 123..130,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                end: 125,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 124..125,
                                    name: Identifier {
                                        id: Name("a"),
                                        range: 124..125,
                                        node_index: NodeIndex(None),
                                        parameter_node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                },
                                default: None,
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 132..135,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 132..135,
                                    },
                                ),
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # parse_options: {"target-version": "3.7"}
2 | def foo(a, /): ...
3 | def foo(a, /, b, /): ...
  |                  ^ Syntax Error: Only one '/' separator allowed
4 | def foo(a, *args, /, b): ...
5 | def foo(a, //): ...
  |


  |
2 | def foo(a, /): ...
3 | def foo(a, /, b, /): ...
4 | def foo(a, *args, /, b): ...
  |                   ^ Syntax Error: '/' parameter must appear before '*' parameter
5 | def foo(a, //): ...
  |


  |
3 | def foo(a, /, b, /): ...
4 | def foo(a, *args, /, b): ...
5 | def foo(a, //): ...
  |            ^^ Syntax Error: Expected `,`, found `//`
  |


## Unsupported Syntax Errors

  |
1 | # parse_options: {"target-version": "3.7"}
2 | def foo(a, /): ...
  |            ^ Syntax Error: Cannot use positional-only parameter separator on Python 3.7 (syntax was added in Python 3.8)
3 | def foo(a, /, b, /): ...
4 | def foo(a, *args, /, b): ...
  |


  |
1 | # parse_options: {"target-version": "3.7"}
2 | def foo(a, /): ...
3 | def foo(a, /, b, /): ...
  |            ^ Syntax Error: Cannot use positional-only parameter separator on Python 3.7 (syntax was added in Python 3.8)
4 | def foo(a, *args, /, b): ...
5 | def foo(a, //): ...
  |


  |
2 | def foo(a, /): ...
3 | def foo(a, /, b, /): ...
4 | def foo(a, *args, /, b): ...
  |                   ^ Syntax Error: Cannot use positional-only parameter separator on Python 3.7 (syntax was added in Python 3.8)
5 | def foo(a, //): ...
  |
