crates/ruff_python_parser/tests/snapshots/invalid_syntax@raise_stmt_invalid_cause.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/raise_stmt_invalid_cause.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..57,
        body: Suite {
            range: 0..57,
            node_index: NodeIndex(None),
            statements: [
                Raise(
                    StmtRaise {
                        node_index: NodeIndex(None),
                        range: 0..15,
                        exc: Some(
                            Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 6..7,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                        ),
                        cause: Some(
                            Starred(
                                ExprStarred {
                                    node_index: NodeIndex(None),
                                    range: 13..15,
                                    value: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 14..15,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                    ctx: Load,
                                },
                            ),
                        ),
                    },
                ),
                Raise(
                    StmtRaise {
                        node_index: NodeIndex(None),
                        range: 16..36,
                        exc: Some(
                            Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 22..23,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                        ),
                        cause: Some(
                            Yield(
                                ExprYield {
                                    node_index: NodeIndex(None),
                                    range: 29..36,
                                    value: Some(
                                        Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 35..36,
                                                id: Name("y"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                },
                            ),
                        ),
                    },
                ),
                Raise(
                    StmtRaise {
                        node_index: NodeIndex(None),
                        range: 37..51,
                        exc: Some(
                            Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 43..44,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                        ),
                        cause: Some(
                            Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 50..51,
                                    id: Name("y"),
                                    ctx: Load,
                                },
                            ),
                        ),
                    },
                ),
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 55..56,
                        value: NumberLiteral(
                            ExprNumberLiteral {
                                node_index: NodeIndex(None),
                                range: 55..56,
                                value: Int(
                                    1,
                                ),
                            },
                        ),
                    },
                ),
            ],
        },
    },
)
```
## Errors

  |
1 | raise x from *y
  |              ^^ Syntax Error: Starred expression cannot be used here
2 | raise x from yield y
3 | raise x from y := 1
  |


  |
1 | raise x from *y
2 | raise x from yield y
  |              ^^^^^^^ Syntax Error: Yield expression cannot be used here
3 | raise x from y := 1
  |


  |
1 | raise x from *y
2 | raise x from yield y
3 | raise x from y := 1
  |                ^^ Syntax Error: Expected a statement
  |
